--- a/src/app/styles.css
+++ b/src/app/styles.css
@@ -15,4 +15,103 @@
   --color-oatmeal-800: oklch(0.35 0.065 87);
   --color-oatmeal-900: oklch(0.27 0.05 87);
   --color-oatmeal-950: oklch(0.18 0.035 87);
+
+  --color-blueberry-50: oklch(0.97 0.015 233);
+  --color-blueberry-100: oklch(0.93 0.03 233);
+  --color-blueberry-200: oklch(0.85 0.05 233);
+  --color-blueberry-300: oklch(0.718 0.077 233);
+  --color-blueberry-400: oklch(0.57 0.11 245);
+  --color-blueberry-500: oklch(0.425 0.144 257);
+  --color-blueberry-600: oklch(0.36 0.12 259);
+  --color-blueberry-700: oklch(0.3 0.1 260);
+  --color-blueberry-800: oklch(0.24 0.08 261);
+  --color-blueberry-900: oklch(0.18 0.06 263);
+  --color-blueberry-950: oklch(0.13 0.03 264);
+
+  @keyframes jumping-square {
+    /* Holds the square still for ~1.2s on load before action starts */
+    0% {
+      transform: translateY(0) scale(1, 1);
+      border-radius: 0%;
+    }
+    10% {
+      transform: translateY(0) scale(1, 1);
+      border-radius: 0%;
+    }
+
+    /* Wobble & Anticipation */
+    11.5% {
+      transform: translateY(0) scale(0.9, 1.1);
+      border-radius: 0%;
+    }
+    13.5% {
+      transform: translateY(0) scale(1.3, 0.7);
+      border-radius: 10%;
+      animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+    }
+
+    /* Jump */
+    18% {
+      /* Use to em to make jump height equal to the font height */
+      transform: translateY(-1em) scale(0.9, 1.1);
+      border-radius: 50%;
+      animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
+    }
+
+    /* Landing & Bounce */
+    22% {
+      transform: translateY(0) scale(1.25, 0.75);
+      border-radius: 50%;
+      animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+    }
+    25% {
+      /* Second bounce scaled based on font size */
+      transform: translateY(-0.375em) scale(0.95, 1.05);
+      border-radius: 50%;
+      animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
+    }
+    28% {
+      transform: translateY(0) scale(1.05, 0.95);
+      border-radius: 50%;
+    }
+    30% {
+      /* Scaled micro hop */
+      transform: translateY(-0.06em) scale(1, 1);
+      border-radius: 50%;
+    }
+    31% {
+      transform: translateY(0) scale(1, 1);
+      border-radius: 50%;
+    }
+
+    /* Short Bridge */
+    32% {
+      transform: translateY(0) scale(1, 1);
+      border-radius: 50%;
+    }
+
+    /* Squeeze Back to Square */
+    34% {
+      transform: translateY(0) scale(0.85, 1.15);
+      border-radius: 50%;
+    }
+    36% {
+      transform: translateY(0) scale(1.3, 0.75);
+      border-radius: 15%;
+    }
+    37.5% {
+      transform: translateY(0) scale(0.95, 1.05);
+      border-radius: 0%;
+    }
+    39% {
+      transform: translateY(0) scale(1, 1);
+      border-radius: 0%;
+    }
+
+    /* Long Pause */
+    100% {
+      transform: translateY(0) scale(1, 1);
+      border-radius: 0%;
+    }
+  }
 }
