--- a/src/app/css/surface.css
+++ b/src/app/css/surface.css
@@ -1,11 +1,11 @@
-@utility surface-dark {
+@utility surface {
   background: linear-gradient(
     135deg,
     oklch(from var(--color-oatmeal-900) l c h / 0.8),
     oklch(from var(--color-oatmeal-950) l c h / 0.9)
   );
   backdrop-filter: blur(20px);
-  /* Slightly darker border for contrast */
+
   border: 1px solid oklch(from var(--color-oatmeal-700) l c h / 0.6);
   border-top: 1px solid oklch(from var(--color-oatmeal-500) l c h / 0.6);
   border-left: 1px solid oklch(from var(--color-oatmeal-500) l c h / 0.6);
@@ -22,6 +22,23 @@
     0px 3.5px 3.1px -1.5px oklch(from var(--color-oatmeal-950) l c h / 0.09),
     0px 7.4px 6.5px -2.3px oklch(from var(--color-oatmeal-950) l c h / 0.09),
     0px 14.8px 13px -3px oklch(from var(--color-oatmeal-950) l c h / 0.1);
+}
+
+@utility surface-clear {
+  background: linear-gradient(135deg, oklch(1 0 0 / 0.6), oklch(1 0 0 / 0.2));
+  backdrop-filter: blur(12px);
+
+  border: 1px solid oklch(1 0 0 / 0.8);
+  border-top: 1px solid oklch(1 0 0 / 0.9);
+  border-left: 1px solid oklch(1 0 0 / 0.9);
+
+  /* prettier-ignore */
+  box-shadow:
+    inset 0 1px 0 0 oklch(1 0 0 / 1),
+    0px 1px 2px oklch(from var(--color-oatmeal-900) l c h / 0.05),
+    0px 3.4px 3.8px -0.5px oklch(from var(--color-oatmeal-900) l c h / 0.05),
+    0px 7.8px 8.7px -1px oklch(from var(--color-oatmeal-900) l c h / 0.06),
+    0px 18px 20px -1.5px oklch(from var(--color-oatmeal-900) l c h / 0.07);
 }
 
 @utility surface-ghost {
@@ -80,9 +97,10 @@
 
   /* prettier-ignore */
   box-shadow:
-    /* Sharp Top Bevel (Chamfered Edge) - Fixed to White (1 0 0) */
+    /* Sharp Top */
     inset 0 1px 0 0 oklch(1 0 0 / 0.25),
-    /* Soft Bottom Reflection */ inset 0 -1px 0 0 oklch(from var(--color-oatmeal-500) l c h / 0.1),
+    /* Soft Bottom */ 
+    inset 0 -1px 0 0 oklch(from var(--color-oatmeal-500) l c h / 0.1),
     /* Drop Shadows */
     0px 1.1px 1.2px oklch(0 0 0 / 0.12),
     0px 2.7px 3px -0.6px oklch(0 0 0 / 0.12),
