--- a/src/app/css/surface.css
+++ b/src/app/css/surface.css
@@ -22,6 +22,8 @@
     0px 3.5px 3.1px -1.5px oklch(from var(--color-oatmeal-950) l c h / 0.09),
     0px 7.4px 6.5px -2.3px oklch(from var(--color-oatmeal-950) l c h / 0.09),
     0px 14.8px 13px -3px oklch(from var(--color-oatmeal-950) l c h / 0.1);
+
+  color: var(--color-oatmeal-200);
 }
 
 @utility surface-clear {
@@ -38,6 +40,8 @@
     0px 3.4px 3.8px -0.5px oklch(from var(--color-oatmeal-900) l c h / 0.05),
     0px 7.8px 8.7px -1px oklch(from var(--color-oatmeal-900) l c h / 0.06),
     0px 18px 20px -1.5px oklch(from var(--color-oatmeal-900) l c h / 0.07);
+
+  color: var(--color-oatmeal-600);
 }
 
 @utility surface-ghost {
@@ -60,6 +64,8 @@
     0px 3.4px 3.8px -0.5px oklch(from var(--color-oatmeal-900) l c h / 0.05),
     0px 7.8px 8.7px -1px oklch(from var(--color-oatmeal-900) l c h / 0.06),
     0px 18px 20px -1.5px oklch(from var(--color-oatmeal-900) l c h / 0.07);
+
+  color: var(--color-oatmeal-100);
 }
 
 @utility surface-tinted {
@@ -83,6 +89,8 @@
     0px 1.6px 1.8px -0.6px oklch(from var(--color-oatmeal-800) l c h / 0.1),
     0px 3.6px 4.1px -1.1px oklch(from var(--color-oatmeal-800) l c h / 0.12),
     0px 8.4px 9.6px -1.7px oklch(from var(--color-oatmeal-800) l c h / 0.12);
+
+  color: var(--color-oatmeal-100);
 }
 
 @utility surface-opaque {
@@ -106,4 +114,6 @@
     0px 5.4px 6px -1.1px oklch(0 0 0 / 0.15),
     0px 10.8px 12px -1.7px oklch(0 0 0 / 0.15),
     0px 21.6px 24px -2.2px oklch(0 0 0 / 0.2);
+
+  color: var(--color-oatmeal-300);
 }
