--- a/src/app/css/styles.css
+++ b/src/app/css/styles.css
@@ -14,6 +14,10 @@
   }
 }
 
+@utility focus-ring {
+  @apply focus-visible:ring-oatmeal-900/50 outline-none focus-visible:ring-4 focus-visible:ring-offset-2;
+}
+
 @utility shrink-scale-* {
   --shrink-scale: calc(--value(integer) * 1%);
 }
