--- a/src/app/css/styles.css
+++ b/src/app/css/styles.css
@@ -2,6 +2,7 @@
 @plugin 'tailwind-scrollbar';
 
 @import './theme.css';
+@import './button.css';
 @import './surface.css';
 
 @media (prefers-reduced-motion: reduce) {
