--- a/src/app/css/surface.css
+++ b/src/app/css/surface.css
@@ -23,7 +23,7 @@
     0px 7.4px 6.5px -2.3px oklch(from var(--color-oatmeal-950) l c h / 0.09),
     0px 14.8px 13px -3px oklch(from var(--color-oatmeal-950) l c h / 0.1);
 
-  color: var(--color-oatmeal-200);
+  color: var(--color-oatmeal-100);
 }
 
 @utility surface-clear {
@@ -41,7 +41,7 @@
     0px 7.8px 8.7px -1px oklch(from var(--color-oatmeal-900) l c h / 0.06),
     0px 18px 20px -1.5px oklch(from var(--color-oatmeal-900) l c h / 0.07);
 
-  color: var(--color-oatmeal-600);
+  color: var(--color-oatmeal-900);
 }
 
 @utility surface-ghost {
@@ -90,7 +90,7 @@
     0px 3.6px 4.1px -1.1px oklch(from var(--color-oatmeal-800) l c h / 0.12),
     0px 8.4px 9.6px -1.7px oklch(from var(--color-oatmeal-800) l c h / 0.12);
 
-  color: var(--color-oatmeal-100);
+  color: var(--color-white);
 }
 
 @utility surface-opaque {
@@ -115,5 +115,5 @@
     0px 10.8px 12px -1.7px oklch(0 0 0 / 0.15),
     0px 21.6px 24px -2.2px oklch(0 0 0 / 0.2);
 
-  color: var(--color-oatmeal-300);
+  color: var(--color-oatmeal-100);
 }
