--- a/src/app/css/surface-2.css
+++ b/src/app/css/surface-2.css
@@ -15,6 +15,84 @@
     0 16px 16px var(--surface-shadow);
 }
 
+@utility surface-default-2 {
+  --surface-bg: linear-gradient(
+    135deg,
+    oklch(from var(--color-oatmeal-900) l c h / 0.8),
+    oklch(from var(--color-oatmeal-950) l c h / 0.9)
+  );
+  --surface-blur: var(--blur-xl);
+  --surface-border: oklch(from var(--color-oatmeal-700) l c h / 0.6);
+  --surface-edge: oklch(from var(--color-oatmeal-500) l c h / 0.6);
+  --surface-highlight: oklch(from var(--color-oatmeal-200) l c h / 0.1);
+  --surface-inner-shadow: oklch(from var(--color-oatmeal-950) l c h / 0.3);
+  --surface-shadow: oklch(from var(--color-oatmeal-950) l c h / 0.09);
+  --surface-text: var(--color-oatmeal-200);
+}
+
+@utility surface-clear-2 {
+  --surface-bg: linear-gradient(
+    135deg,
+    oklch(1 0 0 / 0.45),
+    oklch(1 0 0 / 0.15)
+  );
+  --surface-blur: var(--blur-lg);
+  --surface-border: oklch(1 0 0 / 0.8);
+  --surface-edge: oklch(1 0 0 / 0.9);
+  --surface-highlight: oklch(1 0 0 / 1);
+  --surface-inner-shadow: transparent;
+  --surface-shadow: oklch(from var(--color-oatmeal-900) l c h / 0.06);
+  --surface-text: var(--color-oatmeal-700);
+}
+
+@utility surface-ghost-2 {
+  --surface-bg: linear-gradient(
+    135deg,
+    oklch(from var(--color-oatmeal-800) l c h / 0.35),
+    oklch(from var(--color-oatmeal-950) l c h / 0.5)
+  );
+  --surface-blur: blur(40px);
+  --surface-border: oklch(from var(--color-oatmeal-300) l c h / 0.1);
+  --surface-edge: transparent;
+  --surface-highlight: transparent;
+  --surface-inner-shadow: transparent;
+  --surface-shadow: oklch(from var(--color-oatmeal-900) l c h / 0.06);
+  --surface-text: var(--color-oatmeal-50);
+}
+
+@utility surface-tinted-2 {
+  --surface-bg: linear-gradient(
+    135deg,
+    oklch(from var(--color-oatmeal-600) l c h / 0.65),
+    oklch(from var(--color-oatmeal-800) l c h / 0.75)
+  );
+  --surface-blur: blur(12px);
+  --surface-border: oklch(from var(--color-oatmeal-600) l c h / 0.5);
+  --surface-edge: oklch(from var(--color-oatmeal-400) l c h / 0.4);
+  --surface-highlight: oklch(from var(--color-oatmeal-100) l c h / 0.15);
+  --surface-inner-shadow: transparent;
+  --surface-shadow: oklch(from var(--color-oatmeal-800) l c h / 0.11);
+  --surface-text: var(--color-oatmeal-100);
+}
+
+@utility surface-opaque-2 {
+  --surface-bg: linear-gradient(
+    145deg,
+    oklch(from var(--color-oatmeal-800) l c h / 0.95) 0%,
+    oklch(from var(--color-oatmeal-950) l c h / 1) 100%
+  );
+  --surface-blur: blur(4px);
+  --surface-border: oklch(from var(--color-oatmeal-900) l c h);
+  --surface-edge: transparent;
+  --surface-highlight: oklch(1 0 0 / 0.25);
+  --surface-inner-shadow: oklch(from var(--color-oatmeal-500) l c h / 0.1);
+  --surface-shadow: oklch(0 0 0 / 0.15);
+  --surface-text: var(--color-oatmeal-300);
+}
+
+/*
+* Utilities to set surface properties without using the CSS vars directly.
+*/
 @utility surface-bg-* {
   --surface-bg: --value(--color- *);
   --surface-bg: --value([ *]);
