--- a/src/app/css/styles.css
+++ b/src/app/css/styles.css
@@ -3,6 +3,7 @@
 
 @import './theme.css';
 @import './surface.css';
+@import './utilities.css';
 
 @media (prefers-reduced-motion: reduce) {
   *,
@@ -12,23 +13,4 @@
     transition: none !important;
     animation: none !important;
   }
-}
-
-@utility focus-ring {
-  @apply ring-blueberry-500 ring-offset-oatmeal-50 ring-[3px] ring-offset-2;
-}
-
-@utility shrink-scale-* {
-  --shrink-scale: calc(--value(integer) * 1%);
-}
-
-@utility scroll-trigger {
-  animation-timeline: scroll();
-  animation-range: var(--scroll-trigger-from, 0) var(--scroll-trigger-to, 100%);
-}
-@utility scroll-trigger-from-* {
-  --scroll-trigger-from: calc(--value(integer) * 4px);
-}
-@utility scroll-trigger-to-* {
-  --scroll-trigger-to: calc(--value(integer) * 4px);
 }
