--- a/src/app/css/theme.css
+++ b/src/app/css/theme.css
@@ -1,6 +1,7 @@
 @theme {
   --font-mono: var(--font-mono), monospace;
   --font-sans: var(--font-sans), sans-serif;
+  --typescale: 1.25; /* Major third */
 
   --color-oatmeal-50: oklch(0.97 0.01 87);
   --color-oatmeal-100: oklch(0.923 0.026 87);
