make buttons nicer and use text colors

--- a/src/app/css/surface.css
+++ b/src/app/css/surface.css
@@ -21,6 +21,7 @@
  */
 
 @utility surface {
+  color: var(--color-text);
   background: var(--surface-bg);
   backdrop-filter: var(--surface-blur);
   /* prettier-ignore */
