--- a/src/css/shiki.css
+++ b/src/css/shiki.css
@@ -7,11 +7,6 @@
     --padding-left: calc(var(--spacing) * 4);
     --padding-right: calc(var(--spacing) * 4);
 
-    code {
-      font-size: var(--text-sm);
-      line-height: var(--text-sm--line-height);
-    }
-
     code span {
       color: var(--shiki-light);
     }
@@ -20,6 +15,7 @@
       cursor: pointer;
     }
 
+    /* Override scrollbar */
     .fd-scroll-container {
       &::-webkit-scrollbar {
         width: 6px;
@@ -41,7 +37,12 @@
     }
   }
 
-  :is(pre *):is(.shiki *):not(.not-fumadocs-codeblock *) {
+  :is(.shiki *):is(pre *):not(.not-fumadocs-codeblock *) {
+    code {
+      font-size: var(--text-sm);
+      line-height: var(--text-sm--line-height);
+    }
+
     .line& {
       position: relative;
       min-height: 20px;
@@ -125,6 +126,18 @@
       background-color: oklch(from var(--color-oatmeal-800) l c h / 0.1);
       margin: -1px;
       font-weight: 500;
+    }
+  }
+
+  :is(.shiki *):not(pre *) {
+    .line& {
+      font-size: 90%;
+
+      background-color: oklch(from var(--color-oatmeal-100) l c h / 0.5);
+      border: 1px solid oklch(from var(--color-oatmeal-200) l c h / 0.5);
+      border-radius: var(--radius-md);
+
+      padding: 1px theme(spacing.2);
     }
   }
 }
