--- a/src/css/prose.css
+++ b/src/css/prose.css
@@ -3,35 +3,27 @@
     font-family: var(--font-body);
     color: var(--color-text-body);
     line-height: 1.75;
-    font-size: 1.125rem; /* Large readable text */
+    font-size: var(--text-lg);
     max-width: 75ch;
+    margin-inline: auto;
 
+    /* Default spacing */
     & > * + * {
-      margin-top: 1.5em;
-    }
-
-    /* Headings (h2, h3 within the article) */
-    & h2,
-    & h3,
-    & h4 {
-      font-family: var(--font-sans);
-      font-weight: 700;
-      line-height: 1.3;
-      letter-spacing: -0.015em;
+      margin-top: theme(spacing.6);
     }
 
     /* Give headings more breathing room top */
     & > * + h2 {
-      margin-top: 2.5em;
+      margin-top: theme(spacing.10);
     }
     & > * + h3 {
-      margin-top: 2em;
+      margin-top: theme(spacing.8);
     }
 
     /* Ensure heading is attached to content below it */
     & h2 + *,
     & h3 + * {
-      margin-top: 0.75em;
+      margin-top: theme(spacing.3);
     }
   }
 }
